# TareaPython

./: Etapa1.ipynb  Etapa2.ipynb  README.md  enunciado.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: 06_expresiones_regulares-checkpoint.ipynb  Etapa2-checkpoint.ipynb  enunciado-checkpoint.ipynb
bicimad/: Etapa1.py  UrlEMT.py  __init__.py  bicimad.py
bicimad.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/: api.rst  conf.py  index.rst
tests/: conftest.py  test_UrlEMT.py  test_bicimad.py
